objects/RGMEDD2/WN/SOURCE/RGMEDD2/CTLParser.yy.output
   0  $accept : inizio $end

   1  inizio : expression opt_semicolon
   2         | ctl_formula opt_semicolon
   3         | PROP_NAME VAR
   4         |

   5  opt_semicolon :
   6                | SEMICOLON

   7  l_paren : LPARENT
   8          | LQPARENT

   9  r_paren : RPARENT
  10          | RQPARENT

  11  ctl_formula : atomic_prop
  12              | LPARENT ctl_formula RPARENT
  13              | ctl_formula AND ctl_formula
  14              | ctl_formula OR ctl_formula
  15              | NOT ctl_formula
  16              | ctl_formula IMPLY ctl_formula
  17              | ctl_formula XOR ctl_formula
  18              | ctl_formula BIIMPLY ctl_formula
  19              | EX ctl_formula
  20              | EF ctl_formula
  21              | EG ctl_formula
  22              | E l_paren ctl_formula U ctl_formula r_paren
  23              | AX ctl_formula
  24              | AF ctl_formula
  25              | AG ctl_formula
  26              | A l_paren ctl_formula U ctl_formula r_paren
  27              | POSSIBLY ctl_formula
  28              | IMPOSSIBLY ctl_formula
  29              | INVARIANT ctl_formula

  30  atomic_prop : NDEADLOCK
  31              | DEADLOCK
  32              | TRUEv
  33              | FALSEv
  34              | ENABLED LPARENT transition_list RPARENT
  35              | expression ineq_op expression

  36  ineq_op : EQ
  37          | MINOR
  38          | MINOREQ
  39          | MAJOR
  40          | MAJOREQ
  41          | NEQ

  42  place_list : opt_sharp PLACE_ID
  43             | place_list COMMA opt_sharp PLACE_ID

  44  transition_list : TRANSITION_ID
  45                  | transition_list COMMA TRANSITION_ID

  46  expression : LPARENT expression RPARENT
  47             | opt_sharp PLACE_ID
  48             | BOUNDS LPARENT place_list RPARENT
  49             | NUMBER
  50             | MARK_PAR
  51             | MINUS expression
  52             | expression TIMES expression
  53             | expression DIV expression
  54             | expression PLUS expression
  55             | expression MINUS expression

  56  opt_sharp :
  57            | SHARP

state 0
	$accept : . inizio $end  (0)
	inizio : .  (4)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	PROP_NAME  shift 3
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	$end  reduce 4
	PLACE_ID  reduce 56

	inizio  goto 25
	expression  goto 26
	atomic_prop  goto 27
	ctl_formula  goto 28
	opt_sharp  goto 29


state 1
	expression : NUMBER .  (49)

	.  reduce 49


state 2
	expression : MARK_PAR .  (50)

	.  reduce 50


state 3
	inizio : PROP_NAME . VAR  (3)

	VAR  shift 30
	.  error


state 4
	expression : MINUS . expression  (51)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	LPARENT  shift 31
	BOUNDS  shift 15
	SHARP  shift 16
	PLACE_ID  reduce 56

	expression  goto 32
	opt_sharp  goto 29


state 5
	ctl_formula : NOT . ctl_formula  (15)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 34
	opt_sharp  goto 29


state 6
	ctl_formula : POSSIBLY . ctl_formula  (27)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 35
	opt_sharp  goto 29


state 7
	ctl_formula : IMPOSSIBLY . ctl_formula  (28)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 36
	opt_sharp  goto 29


state 8
	ctl_formula : INVARIANT . ctl_formula  (29)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 37
	opt_sharp  goto 29


state 9
	ctl_formula : LPARENT . ctl_formula RPARENT  (12)
	expression : LPARENT . expression RPARENT  (46)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 38
	atomic_prop  goto 27
	ctl_formula  goto 39
	opt_sharp  goto 29


state 10
	atomic_prop : TRUEv .  (32)

	.  reduce 32


state 11
	atomic_prop : FALSEv .  (33)

	.  reduce 33


state 12
	atomic_prop : DEADLOCK .  (31)

	.  reduce 31


state 13
	atomic_prop : NDEADLOCK .  (30)

	.  reduce 30


state 14
	atomic_prop : ENABLED . LPARENT transition_list RPARENT  (34)

	LPARENT  shift 40
	.  error


state 15
	expression : BOUNDS . LPARENT place_list RPARENT  (48)

	LPARENT  shift 41
	.  error


state 16
	opt_sharp : SHARP .  (57)

	.  reduce 57


state 17
	ctl_formula : E . l_paren ctl_formula U ctl_formula r_paren  (22)

	LPARENT  shift 42
	LQPARENT  shift 43
	.  error

	l_paren  goto 44


state 18
	ctl_formula : A . l_paren ctl_formula U ctl_formula r_paren  (26)

	LPARENT  shift 42
	LQPARENT  shift 43
	.  error

	l_paren  goto 45


state 19
	ctl_formula : AX . ctl_formula  (23)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 46
	opt_sharp  goto 29


state 20
	ctl_formula : AF . ctl_formula  (24)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 47
	opt_sharp  goto 29


state 21
	ctl_formula : AG . ctl_formula  (25)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 48
	opt_sharp  goto 29


state 22
	ctl_formula : EX . ctl_formula  (19)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 49
	opt_sharp  goto 29


state 23
	ctl_formula : EF . ctl_formula  (20)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 50
	opt_sharp  goto 29


state 24
	ctl_formula : EG . ctl_formula  (21)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 51
	opt_sharp  goto 29


state 25
	$accept : inizio . $end  (0)

	$end  accept


state 26
	inizio : expression . opt_semicolon  (1)
	atomic_prop : expression . ineq_op expression  (35)
	expression : expression . TIMES expression  (52)
	expression : expression . DIV expression  (53)
	expression : expression . PLUS expression  (54)
	expression : expression . MINUS expression  (55)
	opt_semicolon : .  (5)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIV  shift 55
	MINOR  shift 56
	MAJOR  shift 57
	MINOREQ  shift 58
	MAJOREQ  shift 59
	EQ  shift 60
	NEQ  shift 61
	SEMICOLON  shift 62
	$end  reduce 5

	ineq_op  goto 63
	opt_semicolon  goto 64


state 27
	ctl_formula : atomic_prop .  (11)

	.  reduce 11


state 28
	inizio : ctl_formula . opt_semicolon  (2)
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	opt_semicolon : .  (5)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	SEMICOLON  shift 62
	$end  reduce 5

	opt_semicolon  goto 70


state 29
	expression : opt_sharp . PLACE_ID  (47)

	PLACE_ID  shift 71
	.  error


state 30
	inizio : PROP_NAME VAR .  (3)

	.  reduce 3


state 31
	expression : LPARENT . expression RPARENT  (46)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	LPARENT  shift 31
	BOUNDS  shift 15
	SHARP  shift 16
	PLACE_ID  reduce 56

	expression  goto 72
	opt_sharp  goto 29


state 32
	expression : MINUS expression .  (51)
	expression : expression . TIMES expression  (52)
	expression : expression . DIV expression  (53)
	expression : expression . PLUS expression  (54)
	expression : expression . MINUS expression  (55)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIV  shift 55
	$end  reduce 51
	MINOR  reduce 51
	MAJOR  reduce 51
	MINOREQ  reduce 51
	MAJOREQ  reduce 51
	EQ  reduce 51
	NEQ  reduce 51
	OR  reduce 51
	XOR  reduce 51
	AND  reduce 51
	IMPLY  reduce 51
	BIIMPLY  reduce 51
	RPARENT  reduce 51
	RQPARENT  reduce 51
	SEMICOLON  reduce 51
	U  reduce 51


state 33
	atomic_prop : expression . ineq_op expression  (35)
	expression : expression . TIMES expression  (52)
	expression : expression . DIV expression  (53)
	expression : expression . PLUS expression  (54)
	expression : expression . MINUS expression  (55)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIV  shift 55
	MINOR  shift 56
	MAJOR  shift 57
	MINOREQ  shift 58
	MAJOREQ  shift 59
	EQ  shift 60
	NEQ  shift 61
	.  error

	ineq_op  goto 63


state 34
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : NOT ctl_formula .  (15)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)

	.  reduce 15


state 35
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : POSSIBLY ctl_formula .  (27)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 27
	RPARENT  reduce 27
	RQPARENT  reduce 27
	SEMICOLON  reduce 27
	U  reduce 27


state 36
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : IMPOSSIBLY ctl_formula .  (28)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 28
	RPARENT  reduce 28
	RQPARENT  reduce 28
	SEMICOLON  reduce 28
	U  reduce 28


state 37
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : INVARIANT ctl_formula .  (29)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 29
	RPARENT  reduce 29
	RQPARENT  reduce 29
	SEMICOLON  reduce 29
	U  reduce 29


state 38
	atomic_prop : expression . ineq_op expression  (35)
	expression : LPARENT expression . RPARENT  (46)
	expression : expression . TIMES expression  (52)
	expression : expression . DIV expression  (53)
	expression : expression . PLUS expression  (54)
	expression : expression . MINUS expression  (55)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIV  shift 55
	MINOR  shift 56
	MAJOR  shift 57
	MINOREQ  shift 58
	MAJOREQ  shift 59
	EQ  shift 60
	NEQ  shift 61
	RPARENT  shift 73
	.  error

	ineq_op  goto 63


state 39
	ctl_formula : LPARENT ctl_formula . RPARENT  (12)
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	RPARENT  shift 74
	.  error


state 40
	atomic_prop : ENABLED LPARENT . transition_list RPARENT  (34)

	TRANSITION_ID  shift 75
	.  error

	transition_list  goto 76


state 41
	expression : BOUNDS LPARENT . place_list RPARENT  (48)
	opt_sharp : .  (56)

	SHARP  shift 16
	PLACE_ID  reduce 56

	place_list  goto 77
	opt_sharp  goto 78


state 42
	l_paren : LPARENT .  (7)

	.  reduce 7


state 43
	l_paren : LQPARENT .  (8)

	.  reduce 8


state 44
	ctl_formula : E l_paren . ctl_formula U ctl_formula r_paren  (22)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 79
	opt_sharp  goto 29


state 45
	ctl_formula : A l_paren . ctl_formula U ctl_formula r_paren  (26)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 80
	opt_sharp  goto 29


state 46
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : AX ctl_formula .  (23)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 23
	RPARENT  reduce 23
	RQPARENT  reduce 23
	SEMICOLON  reduce 23
	U  reduce 23


state 47
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : AF ctl_formula .  (24)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 24
	RPARENT  reduce 24
	RQPARENT  reduce 24
	SEMICOLON  reduce 24
	U  reduce 24


state 48
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : AG ctl_formula .  (25)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 25
	RPARENT  reduce 25
	RQPARENT  reduce 25
	SEMICOLON  reduce 25
	U  reduce 25


state 49
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : EX ctl_formula .  (19)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 19
	RPARENT  reduce 19
	RQPARENT  reduce 19
	SEMICOLON  reduce 19
	U  reduce 19


state 50
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : EF ctl_formula .  (20)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 20
	RPARENT  reduce 20
	RQPARENT  reduce 20
	SEMICOLON  reduce 20
	U  reduce 20


state 51
	ctl_formula : ctl_formula . AND ctl_formula  (13)
	ctl_formula : ctl_formula . OR ctl_formula  (14)
	ctl_formula : ctl_formula . IMPLY ctl_formula  (16)
	ctl_formula : ctl_formula . XOR ctl_formula  (17)
	ctl_formula : ctl_formula . BIIMPLY ctl_formula  (18)
	ctl_formula : EG ctl_formula .  (21)

	OR  shift 65
	XOR  shift 66
	AND  shift 67
	IMPLY  shift 68
	BIIMPLY  shift 69
	$end  reduce 21
	RPARENT  reduce 21
	RQPARENT  reduce 21
	SEMICOLON  reduce 21
	U  reduce 21


state 52
	expression : expression PLUS . expression  (54)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	LPARENT  shift 31
	BOUNDS  shift 15
	SHARP  shift 16
	PLACE_ID  reduce 56

	expression  goto 81
	opt_sharp  goto 29


state 53
	expression : expression MINUS . expression  (55)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	LPARENT  shift 31
	BOUNDS  shift 15
	SHARP  shift 16
	PLACE_ID  reduce 56

	expression  goto 82
	opt_sharp  goto 29


state 54
	expression : expression TIMES . expression  (52)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	LPARENT  shift 31
	BOUNDS  shift 15
	SHARP  shift 16
	PLACE_ID  reduce 56

	expression  goto 83
	opt_sharp  goto 29


state 55
	expression : expression DIV . expression  (53)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	LPARENT  shift 31
	BOUNDS  shift 15
	SHARP  shift 16
	PLACE_ID  reduce 56

	expression  goto 84
	opt_sharp  goto 29


state 56
	ineq_op : MINOR .  (37)

	.  reduce 37


state 57
	ineq_op : MAJOR .  (39)

	.  reduce 39


state 58
	ineq_op : MINOREQ .  (38)

	.  reduce 38


state 59
	ineq_op : MAJOREQ .  (40)

	.  reduce 40


state 60
	ineq_op : EQ .  (36)

	.  reduce 36


state 61
	ineq_op : NEQ .  (41)

	.  reduce 41


state 62
	opt_semicolon : SEMICOLON .  (6)

	.  reduce 6


state 63
	atomic_prop : expression ineq_op . expression  (35)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	LPARENT  shift 31
	BOUNDS  shift 15
	SHARP  shift 16
	PLACE_ID  reduce 56

	expression  goto 85
	opt_sharp  goto 29


state 64
	inizio : expression opt_semicolon .  (1)

	.  reduce 1


state 65
	ctl_formula : ctl_formula OR . ctl_formula  (14)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 86
	opt_sharp  goto 29


state 66
	ctl_formula : ctl_formula XOR . ctl_formula  (17)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 87
	opt_sharp  goto 29


state 67
	ctl_formula : ctl_formula AND . ctl_formula  (13)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 88
	opt_sharp  goto 29


state 68
	ctl_formula : ctl_formula IMPLY . ctl_formula  (16)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 89
	opt_sharp  goto 29


state 69
	ctl_formula : ctl_formula BIIMPLY . ctl_formula  (18)
	opt_sharp : .  (56)

	NUMBER  shift 1
	MARK_PAR  shift 2
	MINUS  shift 4
	NOT  shift 5
	POSSIBLY  shift 6
	IMPOSSIBLY  shift 7
	INVARIANT  shift 8
	LPARENT  shift 9
	TRUEv  shift 10
	FALSEv  shift 11
	DEADLOCK  shift 12
	NDEADLOCK  shift 13
	ENABLED  shift 14
	BOUNDS  shift 15
	SHARP  shift 16
	E  shift 17
	A  shift 18
	AX  shift 19
	AF  shift 20
	AG  shift 21
	EX  shift 22
	EF  shift 23
	EG  shift 24
	PLACE_ID  reduce 56

	expression  goto 33
	atomic_prop  goto 27
	ctl_formula  goto 90
	opt_sharp  goto 29


state 70
	inizio : ctl_formula opt_semicolon .  (2)

	.  reduce 2


state 71
	expression : opt_sharp PLACE_ID .  (47)

	.  reduce 47


state 72
	expression : LPARENT expression . RPARENT  (46)
	expression : expression . TIMES expression  (52)
	expression : expression . DIV expression  (53)
	expression : expression . PLUS expression  (54)
	expression : expression . MINUS expression  (55)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIV  shift 55
	RPARENT  shift 73
	.  error

